<resources>

    <string name="app_name">LOGIN SCREEN</string>
    <string name="login">LOGIN</string>
    <string name="facebook">Sign in with facebook</string>
    <string name="gmail">Sign in with Gmail</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_here_create_account">New here? Create account</string>
    <string name="fb_app_id">App_ID</string>
    <string name="fb_login_id">fb_App_ID</string>
    <string name="submit">Submit</string>
    <string name="please_enter_your_username_again_for_verification">Please enter your username again for verification.</string>
    <string name="please_enter_5_digit_code_sent_to_you_on_your_mobile_number">Please enter 5 digit code sent to you on your mobile number:</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="please_enter_your_password_again">Please enter your password again</string>
    <string name="enter_your_code_here">Enter your code here</string>
    <string name="enter_your_fullname_here">Enter your email id here</string>
    <string name="enter_your_phone_number">Enter your email id</string>
    <string name="enter_your_address_here">Enter your address here</string>
    <string name="enter_password">Enter password</string>
    <string name="type_your_password_again">Type your password again</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="Open">Nursery</string>
    <string name="Close">Nursery</string>
    <string name="main">Main</string>
    <string name="humidity_level">Humidity Level</string>
    <string name="temperature_level">Temperature Level</string>
    <string name="soil_moisture_level">Soil Moisture Level</string>
    <string name="_88">88%</string>
    <string name="_87">87%</string>
    <string name="_72">72%</string>
    <string name="already_user">already_user? Click here</string>
    <string name="enter_password_again">enter password again</string>
    <string name="enter_your_name">enter your email id</string>
    <string name="signup">SignUp</string>
    <string name="password">password</string>
    <string name="username">email id</string>
    <string name="enter_your_number_here">Enter your email id</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="current_humidity_in_arboretum">Current Humidity In Arboretum</string>
    <string name="current_temperature_in_arboretum">Current Temperature In Arboretum</string>
    <string name="current_moisture_level_in_soil">Current Moisture Level in Soil</string>
    <string name="take_picture">Take picture</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="current_date">Current Date</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="etobicoke">ETOBICOKE</string>
    <string name="brampton">BRAMPTON</string>
    <string name="toronto">TORONTO</string>
    <string name="lakeshore">LAKESHORE</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="forth_layout">Forth Layout</string>
    <string name="third_layout">Third Layout</string>
    <string name="second_layout">Second Layout</string>
    <string name="first_layout">First Layout</string>
    <string name="Back">Back</string>
    <string name="Email">Email ID</string>
    <string name="reset">Reset</string>
    <string name="forgot_password_message">Forgot Password message</string>
    <string name="don_t_share">DON\'T SHARE</string>
    <string name="share">SHARE</string>
    <string name="facebook_id">12341234</string>
    <string name="night_mode">Night mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="change_mode_to_day_or_night_time">Change mode to day or night time</string>
    <string name="change_mode">Change mode</string>
    <string name="change_mode_to_day_or_night_mode">Change mode to day or night mode</string>
    <string name="how_do_i_check_for_the_readings">How do I check for the readings?</string>
    <string name="ans1">By Default, the main screen shows the readings of the arboretum at a particular day. The new addition or retrieving additional data has been added. This new implementation will show you previous data values.</string>
    <string name="what_if_i_forget_my_account_password">What if I forget my account password?</string>
    <string name="ans2">If you forget password, click on the link which will ask for your email. After entering email, go to your email and you will be asked to type new password. Now, you can access your account using new password.</string>
    <string name="camera">Camera</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="headingofapp">Real Time Arboretum Monitoring</string>
    <string name="gallery">Gallery</string>
    <string name="enteremailid">Enter your registered email id</string>
    <string name="emailsent">Instructions to reset your password have been sent to you!</string>
    <string name="failtosend">Sorry!! Failed to send reset email! Please try again…</string>
    <string name="already_logged_in">Already Logged In</string>
    <string name="title_activity_maps">Map</string>
    <string name="youarenowloggedin">You are now logged in</string>
    <string name="signinfailed">signInWithUsername:failure</string>
    <string name="authenticationfailed">Authentication failed</string>
    <string name="dataloadingfailed">Data Loading Cancelled/Failed.</string>
    <string name="entercity">Please enter City!!!!!!</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="get_data">Get Data</string>
    <string name="maps">Maps</string>
    <string name="nosavedstate">onRestoreInstanceState: No saved state!!!</string>
    <string name="valuesstored">Values stored</string>
    <string name="values_saved">Values saved</string>
    <string name="enter_old_email_id">Enter old email ID</string>
    <string name="enter_new_email_id">Enter new email ID</string>
    <string name="change_email_id">Change email ID</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="change_pass">Change password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="emailnotupdated">Failed to update email!</string>
    <string name="emailupdated">Email address is updated. Please sign in with new email id!</string>
    <string name="enteremail">Enter email</string>
    <string name="passwordshort">Password too short, enter minimum 6 characters</string>
    <string name="passwordupdated">Password is updated, sign in with new password!</string>
    <string name="passwordnotupdated">Failed to update password!</string>
    <string name="enterpassword">Enter password</string>
    <string name="delete_account">Delete account</string>
    <string name="delete">Delete</string>
    <string name="Accountdeleted">Your profile is deleted now:( Create a new account now!</string>
    <string name="accountnotdeleted">Failed to delete your account! Try again....</string>
    <string-array name="city_arrays">
        <item>Brampton</item>
        <item>Toronto</item>
        <item>Etobicoke</item>
        <item>Vaughan</item>
        <item>Mississauga</item>
    </string-array>
</resources>