<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/maps"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/maps" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/log_out" />
    </group>

</menu>
